@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Net-DNS
-version:      0.54
+version:      0.55_01
 version_from: lib/Net/DNS.pm
 installdirs:  site
 requires:
